--- a/.github/工作流程/stale.yml
+++ b/.github/工作流程/stale.yml
@@ -8,7 +8,7 @@ name: Mark stale issues and pull requests
 on:
 workflow_dispatch:
   schedule:
-    - cron: "47 12 * * *"
+    - cron: '52 12 * * *'
 
 jobs:
    build:
