--- a/.github/工作流程/stale.yml
+++ b/.github/工作流程/stale.yml
@@ -28,7 +28,8 @@ jobs:
           python-version: "3.10"
           architecture: "x64"
 
-      
+      - name: Install packages
+        run: pip install -r requirements.txt
 
       - name: Run application
         
